# szkolny.eu-discord-push

./: .gitignore  Cargo.toml  README.md
src/: db.rs  discord_webhook.rs  fcm_wrapper.rs  main.rs  notification_types.rs  szkolny_api.rs  szkolny_fcm.rs
