[package]
name = "szkolny_discord_push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
discord-message = "0.1.0"
fcm-push-listener = "2.0.1"
futures = "0.3.28"
reqwest = { version = "0.11.21", features = ["json", "blocking"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.30", features = ["formatting"] }
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.1"
url = "2.4.1"
